--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "abssctl"
-version = "0.1.0a0"
+version = "0.1.0a1"
 description = "Actual Budget Multi-Instance Sync Server Admin CLI"
 readme = "README.rst"
 requires-python = ">=3.11"
@@ -28,7 +28,16 @@ classifiers = [
 dependencies = [
   "typer>=0.12.3",
   "rich>=13.7",
+  "PyYAML>=6.0",
 ]
+
+[project.urls]
+Homepage = "https://github.com/DocCyblade/abssctl"
+# Documentation = "https://doccyblade.github.io/abssctl/"
+Source = "https://github.com/DocCyblade/abssctl"
+Issues = "https://github.com/DocCyblade/abssctl/issues"
+Changelog = "https://github.com/DocCyblade/abssctl/blob/main/CHANGELOG.rst"
+
 
 [project.optional-dependencies]
 dev = [
@@ -47,6 +56,18 @@ dev = [
 abssctl = "abssctl.cli:main"
 
 [tool.hatch.build]
+include = [
+  "src/abssctl",
+  "README.rst",
+  "CHANGELOG.rst",
+  "docs/support/actual-support-matrix.rst",
+  "docs/requirements/abssctl-app-specs.txt",
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/abssctl"]
+
+[tool.hatch.build.targets.sdist]
 include = [
   "src/abssctl",
   "README.rst",
