--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -3,14 +3,16 @@ name: Publish Dev Release
 on:
   push:
     tags:
-      - "dev-*"
+      - "v*.*.*-dev"
 
 permissions:
   contents: read
+  id-token: write
 
 jobs:
   publish-dev:
     runs-on: ubuntu-latest
+    environment: publish-dev
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,18 +22,12 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install build tooling
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install build twine hatch
-
       - name: Build distributions
         run: |
           make dist
 
       - name: Publish to TestPyPI
-        env:
-          TWINE_USERNAME: ${{ secrets.TEST_PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_PASSWORD }}
-        run: |
-          python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+        uses: pypa/gh-action-pypi-publish@v1.12.2
+        with:
+          repository-url: https://test.pypi.org/legacy/
+          skip-existing: true
