--- a/.github/workflows/docs-build.yml
+++ b/.github/workflows/docs-build.yml
@@ -3,6 +3,8 @@ name: docs
 on:
   workflow_dispatch:
   push:
+    tags-ignore:
+      - 'v*.*.**-dev'
     tags:
       - 'docs-v*.*.*'
       - 'v*.*.*'
