Add ADR-033 and CI workflows [skip ci]

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,12 @@
-name: CI
+name: abssctl CI
 
 on:
   push:
     branches: [main, dev, "dev-*"]
+    tags:
+      - "v*"
+      - "v*.*.*-dev"
+      - "docs-v*"
   pull_request:
     branches: [main, dev, "dev-*"]
 
