--- a/.github/workflows/docs-build.yml
+++ b/.github/workflows/docs-build.yml
@@ -1,11 +1,10 @@
-name: docs
+name: Build docs to github-pages
 
 on:
   workflow_dispatch:
   push:
     tags:
-      - 'docs-v*.*.**'
-      - 'v*.*.*'
+      - "docs-v*"
 
 permissions:
   contents: read
@@ -39,6 +38,33 @@ jobs:
         with:
           python-version: "3.12"
           cache: "pip"
+
+      - name: Validate docs tag version
+        if: github.event_name == 'push'
+        run: |
+          TAG="${GITHUB_REF_NAME}"
+          if [[ "${TAG}" != docs-v* ]]; then
+            echo "Docs workflow triggered for unexpected tag: ${TAG}"
+            exit 1
+          fi
+          EXPECTED_VERSION="${TAG#docs-v}"
+          export EXPECTED_VERSION
+          PYTHONPATH=src python3 - <<'PY'
+import importlib.util
+import os
+import pathlib
+import sys
+
+tag_version = os.environ["EXPECTED_VERSION"]
+init_path = pathlib.Path("src/abssctl/__init__.py")
+spec = importlib.util.spec_from_file_location("abssctl", init_path)
+module = importlib.util.module_from_spec(spec)
+spec.loader.exec_module(module)
+package_version = module.__version__
+if package_version != tag_version:
+    print(f"Tag version {tag_version} does not match package version {package_version}")
+    sys.exit(1)
+PY
 
       - name: Install doc dependencies
         run: |
