--- a/.github/workflows/docs-build.yml
+++ b/.github/workflows/docs-build.yml
@@ -47,9 +47,7 @@ jobs:
             echo "Docs workflow triggered for unexpected tag: ${TAG}"
             exit 1
           fi
-          EXPECTED_VERSION="${TAG#docs-v}"
-          export EXPECTED_VERSION
-          PYTHONPATH=src python3 -c "import importlib.util, os, pathlib, sys; tag_version = os.environ['EXPECTED_VERSION']; init_path = pathlib.Path('src/abssctl/__init__.py'); spec = importlib.util.spec_from_file_location('abssctl', init_path); module = importlib.util.module_from_spec(spec); spec.loader.exec_module(module); package_version = module.__version__; sys.exit(0 if package_version == tag_version else f'Tag version {tag_version} does not match package version {package_version}')"
+          python3 buildtools/validate_tag_version.py --kind docs --tag "${TAG}"
 
       - name: Install doc dependencies
         run: |
