--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,9 @@
-name: CI
+name: CI Test Suite
 
 on:
   push:
     branches: [main, dev, "dev-*"]
+
   pull_request:
     branches: [main, dev, "dev-*"]
 
@@ -15,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11"]
 
     steps:
       - name: Checkout repository
